--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -15,7 +15,7 @@
   },
   "permissions": ["tabs", "activeTab", "scripting"],
   "host_permissions": [
-    "https://www.linkedin.com/in/*"
+    "<all_urls>"
   ],
   "options_page": "options.html",
   "background": {
@@ -23,7 +23,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*/*"],
+      "matches": ["https://www.linkedin.com/in/*"],
       "js": ["contentScript.js"]
     }
   ]
