--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -13,7 +13,7 @@
     "default_title": "Linkdn Auto-Connect Extension",
     "default_icon": "icon.png"
   },
-  "permissions": ["tabs", "activeTab", "scripting"],
+  "permissions": ["tabs", "activeTab"],
   "host_permissions": [
     "https://www.linkedin.com/in/*"
   ],
