--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -13,18 +13,12 @@
     "default_title": "Linkdn Auto-Connect Extension",
     "default_icon": "icon.png"
   },
-  "permissions": ["tabs", "activeTab"],
+  "permissions": ["tabs", "activeTab", "scripting"],
   "host_permissions": [
     "https://www.linkedin.com/in/*"
   ],
   "options_page": "options.html",
   "background": {
     "service_worker": "background.js"
-  },
-  "content_scripts": [
-    {
-      "matches": ["https://www.linkedin.com/in/*"],
-      "js": ["contentScript.js"]
-    }
-  ]
+  }
 }
